Fixed url input field expanding outside on specific screen ratio; Attempt to fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ html {
     box-sizing: border-box;
     height: 100%;
     margin: 0;
+    top: 0;
+    bottom: 0;
+    position: fixed;
 }
 
 body {
@@ -53,6 +56,7 @@ body {
     /*width: calc(100% - 6em);*/
     display: flex;
     flex: 1;
+    min-width: 0;
 }
 
 #input_btn {
